tests/baselines/reference/parserArrowFunctionExpression8(target=es3).errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js(1,1): error TS2304: Cannot find name 'x'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts(1,1): error TS2304: Cannot find name 'x'.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileJs.js (1 errors) ====
    x ? y => ({ y }) : z => ({ z }) // Legal JS
    ~
!!! error TS2304: Cannot find name 'x'.
    
==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/fileTs.ts (1 errors) ====
    x ? y => ({ y }) : z => ({ z })
    ~
!!! error TS2304: Cannot find name 'x'.
    